--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.1",
     "jquery": "^3.3.1",
     "ng-bootstrap": "^1.6.3",
+    "ngx-mask": "^16.3.6",
     "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
