--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-mask": "^16.3.6",
     "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.28",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
